--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <label for="username">username</label>
             <input id ="username" type="text" name="username"><br><br>
 
+            <label for="email">email</label>
+            <input id ="email" type="text" name="email"><br><br>
+
             <label for="username">fname</label>
             <input id ="fname" type="text" name="fname"><br><br>
 
